Endpoint get all users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/evaluation
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
